Aggiunta parte contatta un partner con due colonne

--- a/index.html
+++ b/index.html
@@ -409,7 +409,22 @@
 
 
             </section>
+            <!-- Sezione contatta un partner due colonne -->
+            <section class="cont-partner clearfix">
+                <div class="col-left">
+                    <img src="img/partner.png" alt="Immagine di due persone che parlano">
+                </div>
+                <div class="col-right">
+                    <h3>Entra in contatto con uno dei nostri partner Dropbox</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis laudantium voluptatibus, ut voluptas enim quod, minima assumenda quis, odit consequuntur nesciunt ratione aperiam iste unde non eum sequi illo vitae.
+                    </p>
+                    <a href="#" class="white-btn-big">
+                        Trova un partner
+                    </a>
+                </div>
 
+            </section>
         </div>
 
     </main>
