Aggiunta parte operazioni con un paio di terzetti di colonne, immagine titolo paragrafo

--- a/index.html
+++ b/index.html
@@ -425,6 +425,44 @@
                 </div>
 
             </section>
+            <!-- Sezione operazioni- titolo e due terzetti di colonne  -->
+            <section class="operation_list">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="clearfix">
+                    <div class="col-left">
+                        <img src="img/business-feature-switching-tools.png" alt="Condivisione strumenti">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                    <div class="col-left">
+                        <img src="img/business-feature-coordinate-it.png" alt="Coordinte con il cliente">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                    <div class="col-right">
+                        <img src="img/business-feature-multi-device.png" alt="Con più device">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                </div>
+                <div class="clearfix">
+                    <div class="col-left">
+                        <img src="img/business-feature-integrations-it.png" alt="Integrazione con più strumenti">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                    <div class="col-left">
+                        <img src="img/business-feature-send-files-it.png" alt="Invia file">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                    <div class="col-right">
+                        <img src="img/business-feature-security.png" alt="Sicuro">
+                        <h3>Passa di mano ad uno strumento all'altro</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, in. Aut cumque quas non tempora dolores asperiores laborum mollitia, ullam et sapiente porro similique nisi totam qui itaque deleniti amet.</p>
+                    </div>
+                </div>
+            </section>
         </div>
 
     </main>
