--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </nav>
     <!-- Jumbo -->
-    <div class="jumbo">
+    <div class="jumbo l-azur">
         <div class="large-container">
             <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
 
@@ -536,7 +536,23 @@
             </div>
 
         </section>
-    
+        <!-- Sezione celeste "Prota DB nella tua azienda" -->
+        <section class="try-it l-azur">
+            <div class="clearfix skinny-container">
+                <div class="col-left">
+                    <h2>
+                        Porta Dropbox Business nella tua azienda.
+                    </h2>
+
+                </div>
+                <div class="col-right">
+                    <a href="#" class="white-bordless-btn-big">
+                        Provalo ora
+                    </a>
+
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
