Aggiunto menu a tendina

--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
             <ul>
                 <li>
                     <a href="#">Supporto</a>
-
+                    <ul class="none">
+                        <li><a href="https://boolean.careers/">Link a boolean</a></li>
+                        <li><a href="https://google.com">Link</a></li>
+                        <li><a href="#">Link più lungo</a></li>
+                        <li><a href="#">Link più luuungo</a></li>
+                        <li><a href="#">Link mooolto luungooo</a></li>
+                    </ul>
                 </li>
                 <li>
 
